# chemical-eia-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: release.yml  test.yml
adapters/claude-code/: adapter.json
docs/release-notes/: v0.1.0.md
examples/minimal/: README.md  decisions.json  expected-structure.md  model.json
release/: public-release-policy.json
skills/analyzing-chemical-eia-processes/: SKILL.md
skills/analyzing-chemical-eia-processes/agents/: openai.yaml
src/chemical_eia/: balance.py  cli.py  model_io.py  pipeline.py  rendering.py  validation.py
tests/public/: helpers.py  test_artifacts.py  test_cli_and_example.py  test_distribution.py  test_release_candidate.py  test_release_safety.py  test_skill_and_adapter.py
tools/: public_checksums.py  public_release_gate.py  public_scan.py  release_artifacts.py  release_candidate.py
